--- a/todo
+++ b/todo
@@ -276,11 +276,22 @@ emacs mode:
 Ken (Till)
 ************************************************
 
+look at command line interface (just call hets)
+
+implement simplified rule Theorem-Hide-Shift
+Proofs.TheoremHideShiftSimp
+
+try out examples
+conservativity calculus
+weakly amalgamable cocones
+
 development graph calculus
 (see Sect. IV:4.4 of the CASL Reference Manual)
 
 look at Static/DevGraph.hs
 look at Proofs/EdgeUtils.hs Proofs/StatusUtils.hs Proofs/Global.hs
+
+test command line interface (just call hets)
 
 test development graph GUI:
    global decomposition
@@ -290,12 +301,10 @@ test development graph GUI:
    use update of uDrawGraph-nodes,edges instead of erasing and adding nodes
      for attribute changes like color
 
+profiling for "automatic" (look at www.haskell.org/ghc)
+
 restrict proofs: only one prove window per node at a given time
 
-implement simplified rule Theorem-Hide-Shift
-try out examples
-conservativity calculus
-weakly amalgamable cocones
 
 
 ************************************************
@@ -559,7 +568,9 @@ Integration with generic prover interface?
 Till
 ************************************************
 
-translation of proofs along comorphisms
+enhance Web interface with SPASS (%implied, consistency)
+
+translation of proofs along comorphisms (it this necessary at all???)
   use inverse morphism?
   leads to translation of G_theory along comorphism that also
     keeps proof status info
