Florian git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7047 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -71,7 +71,7 @@ Florian (Till)
 
 Modelchecker für algebraische Eigenschaften
  neue Hets-Option dafür (Christian Maeder fragen)
- hets -n NonAssocRelationAlgebra --model datei.lisp Calculi/Algebra/RelationAlgebra.casl 
+ hets -n NonAssocRelationAlgebra --modelSparQ datei.lisp Calculi/Algebra/RelationAlgebra.casl 
  siehe auch CASL.CompositionTable.ComputeTable
  modelCheck :: SIMPLE_ID -> (Sign f e, [Named (FORMULA f)])
                        -> Result Bool
