modelSparQ option angepasst git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7049 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -70,13 +70,13 @@ Florian (Till)
 ************************************************
 
 Modelchecker für algebraische Eigenschaften
- neue Hets-Option dafür (Christian Maeder fragen)
- hets -n NonAssocRelationAlgebra --modelSparQ datei.lisp Calculi/Algebra/RelationAlgebra.casl 
+ neue Hets-Option in Driver/WriteFn.hs implementieren
+ hets -n NonAssocRelationAlgebra 
+     --modelSparQ=datei.lisp Calculi/Algebra/RelationAlgebra.casl 
+ (oder -m datei.lisp)
  siehe auch CASL.CompositionTable.ComputeTable
  modelCheck :: SIMPLE_ID -> (Sign f e, [Named (FORMULA f)])
                        -> Result Bool
- Funktion modelCheck ähnlich wie computeCompTable in Driver.WriteFn einbinden
-   (Christian Maeder fragen)
  Warnung mit Gegenbspen ausgeben, wenn eine Eigenschaft nicht gilt
    (abbrechen nach 10 Gegenbspen)
    Warnungen erzeugen mit Funktion warning aus Common.Result
