added simulated induction git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7133 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -322,6 +322,8 @@ this theorem link by inserting a new global theorem link
 theta o sigma : N1->N3.
 use functions from Proofs.TheoremHideShift
 
+improve dependency tracking for development graph proofs
+  display proved theorem links that depend on pending other proofs in yellow
 
 try out examples
 conservativity calculus
