--- a/todo
+++ b/todo
@@ -329,6 +329,8 @@ nodes with ingoing hiding links.
 improve dependency tracking for development graph proofs
   display proved theorem links that depend on pending other proofs in yellow
 
+display normal form of nodes with ingoing hiding links
+
 try out examples
 conservativity calculus
 pushouts http://en.wikipedia.org/wiki/Pushout_%28category_theory%29
