Ken git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7139 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -323,6 +323,10 @@ theta o sigma : N1->N3.
 use functions from Proofs.TheoremHideShift
   test file: see CASL-lib/test_TheoremHideShift.casl
 
+error in test_HideTheoremShift.casl
+  (when doing Automatic, HideTheoremShift, Automatic, and then
+   local proof in Target')
+
 issue warning whne displaing theories (or performing proofs) of
 nodes with ingoing hiding links.
 
@@ -355,6 +359,7 @@ test development graph GUI:
 profiling for "automatic" (look at www.haskell.org/ghc)
 
 restrict proofs: only one prove window per node at a given time
+
 
 ************************************************
 further task 1
