--- a/todo
+++ b/todo
@@ -339,6 +339,8 @@ nodes with ingoing hiding links.
 
 improve dependency tracking for development graph proofs
   display proved theorem links that depend on pending other proofs in yellow
+  (other proofs = proofs of other links or %implied theorems - 
+   track which of the latter are actually used)
 
 display normal form of nodes with ingoing hiding links
 
@@ -558,6 +560,18 @@ for ProofManagement-GUI
   test all this with CASL-lib/Calculi/Space/RCCVerification.het
   all nodes without incoming heterogeneous edges are provable with
   SPASS
+
+************************************************
+Martin
+************************************************
+
+Maude as logic in Hets
+Use Maude for CASL rewriting
+Use Maude as a model description language for modal logic,
+  integrate Maude model cheker (connection with ModalCASL)
+  Also integrate other model checkers (SMV, SPIN)?
+  Translations between model description languages?
+  Run model checkers in parallel?
 
 ************************************************
 Klaus
